Polish up fluid units